# audionote

./: main.py  pyproject.toml
src/: app.py  formatting.py  transcribe.py
